feat: Enhance spaceship Titanic analysis notebook with additional model implementations and evaluation metrics, including Decision Tree and Random Forest classifiers, along with model comparison visualization

--- a/spaceship-titanic/spaceship.ipynb
+++ b/spaceship-titanic/spaceship.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,12 +17,15 @@
     "from sklearn.utils import resample\n",
     "from imblearn.over_sampling import SMOTE, RandomOverSampler\n",
     "from imblearn.under_sampling import RandomUnderSampler\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import cross_val_score, StratifiedKFold\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +312,7 @@
        "[8693 rows x 14 columns]"
       ]
      },
-     "execution_count": 268,
+     "execution_count": 312,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +541,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 277,
+     "execution_count": 321,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +608,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 280,
+     "execution_count": 324,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -828,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [
     {
@@ -1140,7 +1143,7 @@
        "[8693 rows x 17 columns]"
       ]
      },
-     "execution_count": 287,
+     "execution_count": 331,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1151,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1162,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 333,
    "metadata": {},
    "outputs": [
     {
@@ -1185,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 334,
    "metadata": {},
    "outputs": [
     {
@@ -1194,7 +1197,7 @@
        "50.362360519958585"
       ]
      },
-     "execution_count": 290,
+     "execution_count": 334,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1205,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1215,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1233,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [
     {
@@ -1254,7 +1257,7 @@
        "Name: count, Length: 6954, dtype: int64"
       ]
      },
-     "execution_count": 293,
+     "execution_count": 337,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1273,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1288,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 339,
    "metadata": {},
    "outputs": [
     {
@@ -1300,7 +1303,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 295,
+     "execution_count": 339,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1311,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1323,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 341,
    "metadata": {},
    "outputs": [
     {
@@ -1335,7 +1338,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 297,
+     "execution_count": 341,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1346,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1357,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 343,
    "metadata": {},
    "outputs": [
     {
@@ -1369,7 +1372,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 299,
+     "execution_count": 343,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1380,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 344,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1391,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 345,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1404,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 346,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1427,7 +1430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 347,
    "metadata": {},
    "outputs": [
     {
@@ -1448,7 +1451,7 @@
        "<module 'numpy' from 'c:\\\\Users\\\\foort\\\\Miniconda3\\\\envs\\\\py39_env\\\\lib\\\\site-packages\\\\numpy\\\\__init__.py'>"
       ]
      },
-     "execution_count": 303,
+     "execution_count": 347,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1464,10 +1467,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Svm \n",
+    "\n",
     "svm = SVC(kernel='rbf', probability=True)\n",
     "\n",
     "# Perform stratified kfold cross validation\n",
@@ -1488,7 +1493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 349,
    "metadata": {},
    "outputs": [
     {
@@ -1515,7 +1520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 350,
    "metadata": {},
    "outputs": [
     {
@@ -1559,7 +1564,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 351,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Decision Tree\n",
+    "dt = DecisionTreeClassifier(random_state=42)\n",
+    "accuracy_scores, precision_scores, recall_scores, f1_scores = [], [], [], []\n",
+    "\n",
+    "for train_index, test_index in skf.split(X_train_smote, y_train_smote):\n",
+    "    X_train_fold, X_val_fold = X_train_smote.iloc[train_index],X_train_smote.iloc[test_index]\n",
+    "    y_train_fold, y_val_fold = y_train_smote.iloc[train_index], y_train_smote.iloc[test_index]\n",
+    "\n",
+    "    dt.fit(X_train_fold, y_train_fold)\n",
+    "    y_pred = dt.predict(X_val_fold)\n",
+    "\n",
+    "    accuracy_scores.append(accuracy_score(y_val_fold, y_pred))\n",
+    "    precision_scores.append(precision_score(y_val_fold, y_pred))\n",
+    "    recall_scores.append(recall_score(y_val_fold, y_pred))\n",
+    "    f1_scores.append(f1_score(y_val_fold, y_pred))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 352,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Decision Tree Results:\n",
+      "Accuracy: 0.7316 +/- 0.0092\n",
+      "Precision: 0.7291 +/- 0.0082\n",
+      "Recall: 0.7370 +/- 0.0123\n",
+      "F1 Score: 0.7330 +/- 0.0099\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\nDecision Tree Results:\")\n",
+    "print(f\"Accuracy: {np.mean(accuracy_scores):.4f} +/- {np.std(accuracy_scores):.4f}\")\n",
+    "print(f\"Precision: {np.mean(precision_scores):.4f} +/- {np.std(precision_scores):.4f}\")\n",
+    "print(f\"Recall: {np.mean(recall_scores):.4f} +/- {np.std(recall_scores):.4f}\")\n",
+    "print(f\"F1 Score: {np.mean(f1_scores):.4f} +/- {np.std(f1_scores):.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 355,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Random Forest\n",
+    "rf = RandomForestClassifier(n_estimators=1000, random_state=42)\n",
+    "accuracy_scores, precision_scores, recall_scores, f1_scores = [], [], [], []\n",
+    "\n",
+    "\n",
+    "for train_index, test_index in skf.split(X_train_smote, y_train_smote):\n",
+    "    X_train_fold, X_val_fold = X_train_smote.iloc[train_index], X_train_smote.iloc[test_index]\n",
+    "    y_train_fold, y_val_fold = y_train_smote.iloc[train_index], y_train_smote.iloc[test_index]\n",
+    "\n",
+    "    rf.fit(X_train_fold, y_train_fold)\n",
+    "    y_pred = rf.predict(X_val_fold)\n",
+    "\n",
+    "    accuracy_scores.append(accuracy_score(y_val_fold, y_pred))\n",
+    "    precision_scores.append(precision_score(y_val_fold, y_pred))\n",
+    "    recall_scores.append(recall_score(y_val_fold, y_pred))\n",
+    "    f1_scores.append(f1_score(y_val_fold, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 356,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Random Forest Results:\n",
+      "Accuracy: 0.7944 +/- 0.0018\n",
+      "Precision: 0.8097 +/- 0.0060\n",
+      "Recall: 0.7698 +/- 0.0047\n",
+      "F1 Score: 0.7892 +/- 0.0009\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\nRandom Forest Results:\")\n",
+    "print(f\"Accuracy: {np.mean(accuracy_scores):.4f} +/- {np.std(accuracy_scores):.4f}\")\n",
+    "print(f\"Precision: {np.mean(precision_scores):.4f} +/- {np.std(precision_scores):.4f}\")\n",
+    "print(f\"Recall: {np.mean(recall_scores):.4f} +/- {np.std(recall_scores):.4f}\")\n",
+    "print(f\"F1 Score: {np.mean(f1_scores):.4f} +/- {np.std(f1_scores):.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Compare all models\n",
+    "def evaluate_model(model, X, y, cv):\n",
+    "    scores = cross_val_score(model, X, y, cv=cv, scoring='accuracy')\n",
+    "    return scores.mean(), scores.std()\n",
+    "\n",
+    "# Create dictionary of models\n",
+    "models = {\n",
+    "    'KNN': KNeighborsClassifier(n_neighbors=5),\n",
+    "    'SVM': SVC(kernel='rbf', probability=True),\n",
+    "    'Naive Bayes': GaussianNB(),\n",
+    "    'Decision Tree': DecisionTreeClassifier(random_state=42),\n",
+    "    'Random Forest': RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "}\n",
+    "results= []\n",
+    "for name, model in models.items():\n",
+    "     mean_score, std_score = evaluate_model(model, X_train_smote, y_train_smote, cv=3)\n",
+    "     results.append({\n",
+    "        'Model': name,\n",
+    "        'Mean Accuracy': mean_score,\n",
+    "        'Std Dev': std_score\n",
+    "     })\n",
+    "\n",
+    "\n",
+    "# Create comparison DataFrame\n",
+    "comparison_df = pd.DataFrame(results)\n",
+    "print(\"\\nModel Comparison:\")\n",
+    "print(comparison_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualize model comparison\n",
+    "plt.figure(figsize=(10,6))\n",
+    "plt.bar(comparison_df['Model'], comparison_df['Mean Accuracy'])\n",
+    "plt.title('Model Accuracy Comparison')\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.ylabel('Mean Accuracy')\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 353,
    "metadata": {},
    "outputs": [
     {
@@ -1589,12 +1745,13 @@
     "final_model.fit(X_train_smote, y_train_smote)\n",
     "\n",
     "print(\"Final model evaluation on test set using smote:\")\n",
-    "print(classification_report(y_test, final_model.predict(X_test)))\n"
+    "print(classification_report(y_test, final_model.predict(X_test)))\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 354,
    "metadata": {},
    "outputs": [
     {
